Supported scenario update before sending to user
